--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
                                             </div>
 
                                             <!-- Botón (solo visible en móviles) -->
-                                            <a href="" target="_blank" onclick="event.stopPropagation()"
+                                            <a href="src/templates/Cate-SIS.html" target="_blank" onclick="event.stopPropagation()"
                                                 class="md:hidden inline-flex items-center justify-center gap-2 px-4 py-2 bg-transparent hover:bg-blue-500/10 text-blue-400 hover:text-blue-300 rounded-full border border-blue-500/50 hover:border-blue-400 transition-all duration-200 hover:scale-[1.02] active:scale-95 mt-2 text-sm">
                                                 <span class="font-medium">Abrir Proyecto</span>
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -1371,7 +1371,7 @@
                                             </div>
 
                                             <!-- Botón (solo visible en móviles) -->
-                                            <a href="https://sistema.clublooneytunes.com/" target="_blank"
+                                            <a href="src/templates/Distrito Japones.html" target="_blank"
                                                 onclick="event.stopPropagation()"
                                                 class="md:hidden inline-flex items-center justify-center gap-2 px-4 py-2 bg-transparent hover:bg-blue-500/10 text-blue-400 hover:text-blue-300 rounded-full border border-blue-500/50 hover:border-blue-400 transition-all duration-200 hover:scale-[1.02] active:scale-95 mt-2 text-sm">
                                                 <span class="font-medium">Abrir Proyecto</span>
