Cambios de Descripción en el proyecto de Distrito Japonés

--- a/index.html
+++ b/index.html
@@ -1392,8 +1392,9 @@
                                                 Distrito Japones
                                             </h3>
                                             <p class="text-text-light text-xs sm:text-sm leading-relaxed mb-4 sm:mb-0">
-                                                Plataforma de comercio electrónico moderna desarrollada para la venta
-                                                digital de contenido japonés oficial como anime, música y videografía.
+                                                Diseñé y desarrollé la interfaz de una plataforma de comercio electrónico 
+                                                moderna desarrollada para la venta digital de contenido japonés oficial como 
+                                                anime, música y videografía mediante cangeo de monedas virtuales.
                                             </p>
                                             <span class="text-cyan-400 font-semibold">EN DESARROLLO</span>
 
