Mejora del formulario de contacto para mobiles

--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,8 @@
                                             </div>
 
                                             <!-- Botón (solo visible en móviles) -->
-                                            <a href="src/templates/Cate-SIS.html" target="_blank" onclick="event.stopPropagation()"
+                                            <a href="src/templates/Cate-SIS.html" target="_blank"
+                                                onclick="event.stopPropagation()"
                                                 class="md:hidden inline-flex items-center justify-center gap-2 px-4 py-2 bg-transparent hover:bg-blue-500/10 text-blue-400 hover:text-blue-300 rounded-full border border-blue-500/50 hover:border-blue-400 transition-all duration-200 hover:scale-[1.02] active:scale-95 mt-2 text-sm">
                                                 <span class="font-medium">Abrir Proyecto</span>
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -1392,8 +1393,10 @@
                                                 Distrito Japones
                                             </h3>
                                             <p class="text-text-light text-xs sm:text-sm leading-relaxed mb-4 sm:mb-0">
-                                                Diseñé y desarrollé la interfaz de una plataforma de comercio electrónico 
-                                                moderna desarrollada para la venta digital de contenido japonés oficial como 
+                                                Diseñé y desarrollé la interfaz de una plataforma de comercio
+                                                electrónico
+                                                moderna desarrollada para la venta digital de contenido japonés oficial
+                                                como
                                                 anime, música y videografía mediante cangeo de monedas virtuales.
                                             </p>
                                             <span class="text-cyan-400 font-semibold">EN DESARROLLO</span>
@@ -1533,7 +1536,7 @@ Ve a https://www.emailjs.com/
 
     </main>
 
-    <!-- Al final del body, antes de cerrar </body> -->
+
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </body>
 
