--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
     </script>
 
     <!-- EmailJS SDK -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <!-- Carga EmailJS de manera asíncrona -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+        defer></script>
+
 
     <!-- Fonts & Icons -->
     <link rel="preload" href="fonts/MiFuente.woff2" as="font" type="font/woff2" crossorigin>
