Mejora de diseño transparente a corde con el fondo

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
 
                     <!-- Tarjeta 1: Frontend Stack -->
-                    <div class="bg-dark-gray border border-medium-gray rounded-2xl p-6 shadow-lg">
+                    <div class="bg-dark-gray/80 backdrop-blur-sm border border-medium-gray rounded-2xl p-6 shadow-lg">
                         <div class="mb-6">
                             <h3 class="text-2xl font-bold text-white mb-4 flex items-center gap-3">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -642,7 +642,7 @@
                     </div>
 
                     <!-- Tarjeta 2: Backend Stack -->
-                    <div class="bg-dark-gray border border-medium-gray rounded-2xl p-6 shadow-lg">
+                    <div class="bg-dark-gray/80 backdrop-blur-sm border border-medium-gray rounded-2xl p-6 shadow-lg">
                         <div class="mb-6">
                             <h3 class="text-2xl font-bold text-white mb-4 flex items-center gap-3">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -707,7 +707,7 @@
                     </div>
 
                     <!-- Tarjeta 3: Tools -->
-                    <div class="bg-dark-gray border border-medium-gray rounded-2xl p-6 shadow-lg">
+                    <div class="bg-dark-gray/80 backdrop-blur-sm border border-medium-gray rounded-2xl p-6 shadow-lg">
                         <div class="mb-6">
                             <h3 class="text-2xl font-bold text-white mb-4 flex items-center gap-3">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -872,7 +872,7 @@
 
                         <!-- Proyecto 1: Contador de fallecidos (ARRIBA IZQUIERDA) -->
                         <div class="flex-1">
-                            <div class="bg-dark-gray border border-medium-gray rounded-2xl overflow-hidden h-full transition-all duration-500 ease-in-out group cursor-pointer hover:shadow-2xl hover:shadow-cyan hover:border-cyan-800"
+                            <div class="bg-dark-gray/80 backdrop-blur-sm border border-medium-gray rounded-2xl overflow-hidden h-full transition-all duration-500 ease-in-out group cursor-pointer hover:shadow-2xl hover:shadow-cyan hover:border-cyan-800"
                                 onclick="toggleProject(this)">
 
                                 <!-- Vista Inicial (Colapsada) -->
@@ -999,7 +999,7 @@
 
                         <!-- Proyecto 3: Cate-SIS (ABAJO IZQUIERDA) -->
                         <div class="flex-1">
-                            <div class="bg-dark-gray border border-medium-gray rounded-2xl overflow-hidden h-full transition-all duration-500 ease-in-out group cursor-pointer hover:shadow-2xl hover:shadow-cyan hover:border-cyan-800"
+                            <div class="bg-dark-gray/80 backdrop-blur-sm border border-medium-gray rounded-2xl overflow-hidden h-full transition-all duration-500 ease-in-out group cursor-pointer hover:shadow-2xl hover:shadow-cyan hover:border-cyan-800"
                                 onclick="toggleProject(this)">
 
                                 <!-- Vista Inicial (Colapsada) -->
@@ -1128,7 +1128,7 @@
 
                         <!-- Proyecto 2: Statify (ARRIBA DERECHA) -->
                         <div class="flex-1">
-                            <div class="bg-dark-gray border border-medium-gray rounded-2xl overflow-hidden h-full transition-all duration-500 ease-in-out group cursor-pointer hover:shadow-2xl hover:shadow-cyan hover:border-cyan-800"
+                            <div class="bg-dark-gray/80 backdrop-blur-sm border border-medium-gray rounded-2xl overflow-hidden h-full transition-all duration-500 ease-in-out group cursor-pointer hover:shadow-2xl hover:shadow-cyan hover:border-cyan-800"
                                 onclick="toggleProject(this)">
 
                                 <!-- Vista Inicial (Colapsada) -->
@@ -1298,7 +1298,7 @@
 
                         <!-- PROYECTO 4: Distrito Japones -->
                         <div class="flex-1">
-                            <div class="bg-dark-gray border border-medium-gray rounded-2xl overflow-hidden h-full transition-all duration-500 ease-in-out group cursor-pointer hover:shadow-2xl hover:shadow-cyan hover:border-cyan-800"
+                            <div class="bg-dark-gray/80 backdrop-blur-sm border border-medium-gray rounded-2xl overflow-hidden h-full transition-all duration-500 ease-in-out group cursor-pointer hover:shadow-2xl hover:shadow-cyan hover:border-cyan-800"
                                 onclick="toggleProject(this)">
 
                                 <!-- Vista Inicial (Colapsada) -->
