--- a/index.html
+++ b/index.html
@@ -377,25 +377,44 @@
 
 
     <!-- Notch-style Navbar -->
-    <header id="main-header" class="notch-navbar">
-        <nav>
-            <ul class="notch-nav-list">
-                <li class="notch-nav-item">
-                    <a href="#quien-soy" class="notch-nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                            stroke="#ffffff" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-user-icon lucide-user">
+    <header id="main-header" class="fixed top-4 left-1/2 -translate-x-1/2 z-50 transition-all duration-[600ms]">
+        <nav
+            class="bg-[rgba(20,20,20,0.85)] backdrop-blur-[20px] border border-white/10 rounded-[50px] p-2 shadow-[0_8px_32px_rgba(0,0,0,0.3),0_2px_8px_rgba(0,0,0,0.2),inset_0_1px_0_rgba(255,255,255,0.1)]">
+            <ul class="flex justify-center items-center gap-1 list-none p-0 m-0 h-11">
+                <!-- Item 1: Sobre mi -->
+                <li class="relative transition-all duration-[400ms]">
+                    <a href="#quien-soy"
+                        class="group flex items-center justify-center no-underline text-white/80 bg-white/5 rounded-[25px] p-2.5 min-w-[44px] h-11 relative overflow-hidden transition-all duration-[400ms] border border-transparent hover:bg-white/15 hover:border-white/20 hover:text-white hover:px-5 hover:min-w-max hover:shadow-[0_4px_16px_rgba(0,0,0,0.2),inset_0_1px_0_rgba(255,255,255,0.2)]">
+                        <!-- Glow effect -->
+                        <span
+                            class="absolute inset-0 bg-gradient-to-br from-white/10 to-white/5 rounded-[inherit] opacity-0 transition-opacity duration-300 group-hover:opacity-100"></span>
+
+                        <!-- Icon -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"
+                            class="min-w-[20px] flex-shrink-0 relative z-10">
                             <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2" />
                             <circle cx="12" cy="7" r="4" />
                         </svg>
-                        <span class="notch-nav-text">Sobre mi</span>
+
+                        <!-- Text -->
+                        <span
+                            class="text-sm font-medium opacity-0 -translate-x-2.5 transition-all duration-[400ms] whitespace-nowrap overflow-hidden max-w-0 group-hover:opacity-100 group-hover:translate-x-0 group-hover:max-w-[100px] group-hover:ml-2 relative z-10">
+                            Sobre mi
+                        </span>
                     </a>
                 </li>
-                <li class="notch-nav-item">
-                    <a href="#habilidades" class="notch-nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                            stroke="#ffffff" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-brain-icon lucide-brain">
+
+                <!-- Item 2: Habilidades -->
+                <li class="relative transition-all duration-[400ms]">
+                    <a href="#habilidades"
+                        class="group flex items-center justify-center no-underline text-white/80 bg-white/5 rounded-[25px] p-2.5 min-w-[44px] h-11 relative overflow-hidden transition-all duration-[400ms] border border-transparent hover:bg-white/15 hover:border-white/20 hover:text-white hover:px-5 hover:min-w-max hover:shadow-[0_4px_16px_rgba(0,0,0,0.2),inset_0_1px_0_rgba(255,255,255,0.2)]">
+                        <span
+                            class="absolute inset-0 bg-gradient-to-br from-white/10 to-white/5 rounded-[inherit] opacity-0 transition-opacity duration-300 group-hover:opacity-100"></span>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"
+                            class="min-w-[20px] flex-shrink-0 relative z-10">
                             <path d="M12 18V5" />
                             <path d="M15 13a4.17 4.17 0 0 1-3-4 4.17 4.17 0 0 1-3 4" />
                             <path d="M17.598 6.5A3 3 0 1 0 12 5a3 3 0 1 0-5.598 1.5" />
@@ -405,14 +424,24 @@
                             <path d="M6 18a4 4 0 0 1-2-7.464" />
                             <path d="M6.003 5.125a4 4 0 0 0-2.526 5.77" />
                         </svg>
-                        <span class="notch-nav-text">Habilidades</span>
+
+                        <span
+                            class="text-sm font-medium opacity-0 -translate-x-2.5 transition-all duration-[400ms] whitespace-nowrap overflow-hidden max-w-0 group-hover:opacity-100 group-hover:translate-x-0 group-hover:max-w-[100px] group-hover:ml-2 relative z-10">
+                            Habilidades
+                        </span>
                     </a>
                 </li>
-                <li class="notch-nav-item">
-                    <a href="#proyectos" class="notch-nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                            stroke="#ffffff" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-monitor-cog-icon lucide-monitor-cog">
+
+                <!-- Item 3: Proyectos -->
+                <li class="relative transition-all duration-[400ms]">
+                    <a href="#proyectos"
+                        class="group flex items-center justify-center no-underline text-white/80 bg-white/5 rounded-[25px] p-2.5 min-w-[44px] h-11 relative overflow-hidden transition-all duration-[400ms] border border-transparent hover:bg-white/15 hover:border-white/20 hover:text-white hover:px-5 hover:min-w-max hover:shadow-[0_4px_16px_rgba(0,0,0,0.2),inset_0_1px_0_rgba(255,255,255,0.2)]">
+                        <span
+                            class="absolute inset-0 bg-gradient-to-br from-white/10 to-white/5 rounded-[inherit] opacity-0 transition-opacity duration-300 group-hover:opacity-100"></span>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"
+                            class="min-w-[20px] flex-shrink-0 relative z-10">
                             <path d="M12 17v4" />
                             <path d="m14.305 7.53.923-.382" />
                             <path d="m15.228 4.852-.923-.383" />
@@ -426,18 +455,32 @@
                             <path d="M8 21h8" />
                             <circle cx="18" cy="6" r="3" />
                         </svg>
-                        <span class="notch-nav-text">Proyectos</span>
+
+                        <span
+                            class="text-sm font-medium opacity-0 -translate-x-2.5 transition-all duration-[400ms] whitespace-nowrap overflow-hidden max-w-0 group-hover:opacity-100 group-hover:translate-x-0 group-hover:max-w-[100px] group-hover:ml-2 relative z-10">
+                            Proyectos
+                        </span>
                     </a>
                 </li>
-                <li class="notch-nav-item">
-                    <a href="#contactame" class="notch-nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                            stroke="#ffffff" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-mail-icon lucide-mail">
+
+                <!-- Item 4: Contáctame -->
+                <li class="relative transition-all duration-[400ms]">
+                    <a href="#contactame"
+                        class="group flex items-center justify-center no-underline text-white/80 bg-white/5 rounded-[25px] p-2.5 min-w-[44px] h-11 relative overflow-hidden transition-all duration-[400ms] border border-transparent hover:bg-white/15 hover:border-white/20 hover:text-white hover:px-5 hover:min-w-max hover:shadow-[0_4px_16px_rgba(0,0,0,0.2),inset_0_1px_0_rgba(255,255,255,0.2)]">
+                        <span
+                            class="absolute inset-0 bg-gradient-to-br from-white/10 to-white/5 rounded-[inherit] opacity-0 transition-opacity duration-300 group-hover:opacity-100"></span>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"
+                            class="min-w-[20px] flex-shrink-0 relative z-10">
                             <path d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7" />
                             <rect x="2" y="4" width="20" height="16" rx="2" />
                         </svg>
-                        <span class="notch-nav-text">Contáctame</span>
+
+                        <span
+                            class="text-sm font-medium opacity-0 -translate-x-2.5 transition-all duration-[400ms] whitespace-nowrap overflow-hidden max-w-0 group-hover:opacity-100 group-hover:translate-x-0 group-hover:max-w-[100px] group-hover:ml-2 relative z-10">
+                            Contáctame
+                        </span>
                     </a>
                 </li>
             </ul>
