--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                                 download="CV_Franly_Alvarez_Varona.pdf"
                                 class="inline-flex items-center gap-2 bg-[rgba(20,20,20,0.85)] backdrop-blur-sm hover:bg-[rgba(40,40,40,0.9)] text-white font-medium text-base py-3 px-6 rounded-full border border-medium-gray/50 hover:border-light-gray/70 transition-all duration-300 hover:scale-105 active:scale-95 shadow-md hover:shadow-lg">
 
-                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round">
                                     <path
@@ -548,12 +548,26 @@
                             <!-- GitHub - Color negro/gris oficial (#24292E) -->
                             <a href="https://github.com/Fr4nly" target="_blank"
                                 class="inline-flex items-center gap-2 bg-[#24292E] hover:bg-[#2F363D] text-white font-medium text-base py-3 px-6 rounded-full border border-[#3C444D] hover:border-[#4A5568] transition-all duration-300 hover:scale-105 active:scale-95 shadow-md hover:shadow-lg">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                                <svg width="25" height="25" viewBox="0 0 24 24" fill="currentColor">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                         d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0024 12c0-6.63-5.37-12-12-12z" />
                                 </svg>
                                 <span class="font-medium">GitHub</span>
                             </a>
+
+                            <!-- Linkedin - Color negro/gris oficial (#24292E) -->
+                            <a href="https://www.linkedin.com/in/franly-alvarez-varona-2022193a2/" target="_blank"
+                                class="inline-flex items-center gap-2 bg-sky-700 hover:bg-sky-800 text-white font-medium text-base py-3 px-6 rounded-full border border-[#3C444D] hover:border-[#4A5568] transition-all duration-300 hover:scale-105 active:scale-95 shadow-md hover:shadow-lg">
+                                <svg width="25" height="25" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+                                    <path fill="#0076b2"
+                                        d="M116 3H12a8.91 8.91 0 00-9 8.8v104.42a8.91 8.91 0 009 8.78h104a8.93 8.93 0 009-8.81V11.77A8.93 8.93 0 00116 3z" />
+                                    <path fill="#fff"
+                                        d="M21.06 48.73h18.11V107H21.06zm9.06-29a10.5 10.5 0 11-10.5 10.49 10.5 10.5 0 0110.5-10.49M50.53 48.73h17.36v8h.24c2.42-4.58 8.32-9.41 17.13-9.41C103.6 47.28 107 59.35 107 75v32H88.89V78.65c0-6.75-.12-15.44-9.41-15.44s-10.87 7.36-10.87 15V107H50.53z" />
+                                </svg>
+                                <span class="font-medium">Linkedin</span>
+                            </a>
+
+
                         </div>
                     </div>
                 </div>
