Cambio de la descripcion de el proyecto de Statify, y cambio del SVG del botón de Linkedin

--- a/index.html
+++ b/index.html
@@ -558,11 +558,9 @@
                             <!-- Linkedin - Color negro/gris oficial (#24292E) -->
                             <a href="https://www.linkedin.com/in/franly-alvarez-varona-2022193a2/" target="_blank"
                                 class="inline-flex items-center gap-2 bg-sky-700 hover:bg-sky-800 text-white font-medium text-base py-3 px-6 rounded-full border border-[#3C444D] hover:border-[#4A5568] transition-all duration-300 hover:scale-105 active:scale-95 shadow-md hover:shadow-lg">
-                                <svg width="25" height="25" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
-                                    <path fill="#0076b2"
-                                        d="M116 3H12a8.91 8.91 0 00-9 8.8v104.42a8.91 8.91 0 009 8.78h104a8.93 8.93 0 009-8.81V11.77A8.93 8.93 0 00116 3z" />
-                                    <path fill="#fff"
-                                        d="M21.06 48.73h18.11V107H21.06zm9.06-29a10.5 10.5 0 11-10.5 10.49 10.5 10.5 0 0110.5-10.49M50.53 48.73h17.36v8h.24c2.42-4.58 8.32-9.41 17.13-9.41C103.6 47.28 107 59.35 107 75v32H88.89V78.65c0-6.75-.12-15.44-9.41-15.44s-10.87 7.36-10.87 15V107H50.53z" />
+                                <svg width="22" height="22" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1792 1792">
+                                    <path fill="white"
+                                        d="M477 625v991H147V625h330zm21-306q1 73-50.5 122T312 490h-2q-82 0-132-49t-50-122q0-74 51.5-122.5T314 148t133 48.5T498 319zm1166 729v568h-329v-530q0-105-40.5-164.5T1168 862q-63 0-105.5 34.5T999 982q-11 30-11 81v553H659q2-399 2-647t-1-296l-1-48h329v144h-2q20-32 41-56t56.5-52 87-43.5T1285 602q171 0 275 113.5t104 332.5z" />
                                 </svg>
                                 <span class="font-medium">Linkedin</span>
                             </a>
@@ -1348,7 +1346,7 @@
                                                 Sistema Web de registro, reporte y visualización de datos estadísticos
                                                 sobre incidentes y siniestros de la zona norte de la provincia Imbabura
                                                 en Ecuador para la
-                                                empresa de movilidad Movidelnor EP en Ibarra Ecuador mediante
+                                                empresa de movilidad Movidelnor EP mediante
                                                 gráficas interactivas.
                                             </p>
                                             <!-- Botón (oculto en móviles, visible en desktop) -->
