--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portafolio de Franly Alvarez Varona</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="src/img/Blue Arbuz.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="src/img/favicon.ico" type="image/x-icon">
 
     <script>
         tailwind.config = {
