Vuelta a las clases anteriores

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 <body class="bg-black text-text-light pt-20 relative overflow-x-hidden overflow-y-auto scrollbar-hide">
 
 
- <!-- FONDO ESPACIAL MEJORADO -->
+  <!-- FONDO ESPACIAL MEJORADO -->
   <div
-    class="space-bg fixed top-0 left-0 w-full h-full z-[-1] overflow-hidden bg-linear-to-b from-[#0a0a1a] via-[#0f1a3a] to-[#1a2b5a]">
+    class="space-bg fixed top-0 left-0 w-full h-full z-[-1] overflow-hidden bg-gradient-to-b from-[#0a0a1a] via-[#0f1a3a] to-[#1a2b5a]">
 
     <!-- Gradiente de fondo mejorado con más viveza -->
-    <div class="absolute inset-0 bg-linear-to-b from-indigo-950/30 via-purple-900/20 to-blue-950/40"></div>
+    <div class="absolute inset-0 bg-gradient-to-b from-indigo-950/30 via-purple-900/20 to-blue-950/40"></div>
 
     <!-- Nebulosas sutiles mejoradas -->
     <div class="nebula nebula-1 absolute w-[80%] h-[60%] top-[10%] left-[10%] opacity-20 animate-nebula-glow" style="
@@ -124,19 +124,19 @@
       <div class="absolute w-2 h-2 top-[15%] left-[10%] animate-star-twinkle-slow rounded-full"
         style="background: rgba(255, 255, 255, 0.95); box-shadow: 0 0 15px white, 0 0 30px rgba(100, 150, 255, 0.5);">
       </div>
-      <div class="absolute w-0.75 h-0.75 top-[15%] left-[13%] animate-star-twinkle-medium rounded-full"
+      <div class="absolute w-[3px] h-[3px] top-[15%] left-[13%] animate-star-twinkle-medium rounded-full"
         style="background: rgba(255, 255, 255, 0.9); box-shadow: 0 0 10px white; animation-delay: -1s;"></div>
-      <div class="absolute w-1 h-1 top-[20%] left-[13%] animate-star-twinkle-pulse rounded-full"
+      <div class="absolute w-[4px] h-[4px] top-[20%] left-[13%] animate-star-twinkle-pulse rounded-full"
         style="background: rgba(255, 255, 255, 1); box-shadow: 0 0 20px white, 0 0 40px rgba(100, 180, 255, 0.6); animation-delay: -2s;">
       </div>
-      <div class="absolute w-0.75 h-0.75 top-[23%] left-[17%] animate-star-twinkle-random rounded-full"
+      <div class="absolute w-[3px] h-[3px] top-[23%] left-[17%] animate-star-twinkle-random rounded-full"
         style="background: rgba(255, 255, 255, 0.85); box-shadow: 0 0 12px white; animation-delay: -0.5s;">
       </div>
       <div class="absolute w-2 h-2 top-[20%] left-[20%] animate-star-twinkle-fast rounded-full"
         style="background: rgba(255, 255, 255, 0.9); box-shadow: 0 0 15px white; animation-delay: -1.5s;"></div>
-      <div class="absolute w-0.75 h-0.75 top-[16%] left-[20%] animate-star-twinkle-medium rounded-full"
+      <div class="absolute w-[3px] h-[3px] top-[16%] left-[20%] animate-star-twinkle-medium rounded-full"
         style="background: rgba(255, 255, 255, 0.8); box-shadow: 0 0 8px white; animation-delay: -3s;"></div>
-      <div class="absolute w-1.25 h-1.25 top-[18%] left-[23%] animate-star-twinkle-slow rounded-full"
+      <div class="absolute w-[5px] h-[5px] top-[18%] left-[23%] animate-star-twinkle-slow rounded-full"
         style="background: rgba(255, 255, 255, 1); box-shadow: 0 0 25px white, 0 0 50px rgba(120, 170, 255, 0.7); animation-delay: -4s;">
       </div>
     </div>
@@ -150,19 +150,19 @@
       <div class="constellation-line" style="top: 67%; left: 78%; width: 30px; transform: rotate(100deg);"></div>
 
       <!-- Estrellas de Orión -->
-      <div class="absolute w-1.5 h-1.5 top-[60%] left-[70%] animate-star-twinkle-pulse rounded-full"
+      <div class="absolute w-[6px] h-[6px] top-[60%] left-[70%] animate-star-twinkle-pulse rounded-full"
         style="background: rgba(255, 230, 200, 1); box-shadow: 0 0 30px white, 0 0 60px rgba(255, 200, 100, 0.8);">
       </div>
-      <div class="absolute w-1.25 h-1.25 top-[62%] left-[74%] animate-star-twinkle-random rounded-full"
+      <div class="absolute w-[5px] h-[5px] top-[62%] left-[74%] animate-star-twinkle-random rounded-full"
         style="background: rgba(200, 220, 255, 0.95); box-shadow: 0 0 20px rgba(180, 210, 255, 0.9), 0 0 40px rgba(150, 190, 255, 0.6); animation-delay: -1s;">
       </div>
-      <div class="absolute w-1 h-1 top-[65%] left-[74%] animate-star-twinkle-medium rounded-full"
+      <div class="absolute w-[4px] h-[4px] top-[65%] left-[74%] animate-star-twinkle-medium rounded-full"
         style="background: rgba(255, 240, 220, 0.9); box-shadow: 0 0 15px rgba(255, 230, 200, 0.8); animation-delay: -2s;">
       </div>
-      <div class="absolute w-0.75 h-0.75 top-[67%] left-[78%] animate-star-twinkle-fast rounded-full"
+      <div class="absolute w-[3px] h-[3px] top-[67%] left-[78%] animate-star-twinkle-fast rounded-full"
         style="background: rgba(255, 255, 255, 0.85); box-shadow: 0 0 10px white; animation-delay: -0.5s;">
       </div>
-      <div class="absolute w-0.75 h-0.75 top-[58%] left-[72%] animate-star-twinkle-slow rounded-full"
+      <div class="absolute w-[3px] h-[3px] top-[58%] left-[72%] animate-star-twinkle-slow rounded-full"
         style="background: rgba(255, 255, 255, 0.8); box-shadow: 0 0 12px white; animation-delay: -3s;"></div>
     </div>
 
@@ -175,16 +175,16 @@
       <div class="constellation-line" style="top: 34%; left: 89%; width: 35px; transform: rotate(220deg);"></div>
 
       <!-- Estrellas de Casiopea -->
-      <div class="absolute w-1 h-1 top-[25%] left-[80%] animate-star-twinkle-fast rounded-full"
+      <div class="absolute w-[4px] h-[4px] top-[25%] left-[80%] animate-star-twinkle-fast rounded-full"
         style="background: rgba(255, 255, 255, 0.9); box-shadow: 0 0 18px white;"></div>
-      <div class="absolute w-0.75 h-0.75 top-[28%] left-[83%] animate-star-twinkle-pulse rounded-full"
+      <div class="absolute w-[3px] h-[3px] top-[28%] left-[83%] animate-star-twinkle-pulse rounded-full"
         style="background: rgba(255, 255, 255, 0.85); box-shadow: 0 0 14px white; animation-delay: -1s;"></div>
-      <div class="absolute w-1 h-1 top-[31%] left-[86%] animate-star-twinkle-medium rounded-full"
+      <div class="absolute w-[4px] h-[4px] top-[31%] left-[86%] animate-star-twinkle-medium rounded-full"
         style="background: rgba(220, 230, 255, 0.95); box-shadow: 0 0 16px rgba(200, 220, 255, 0.9); animation-delay: -2s;">
       </div>
-      <div class="absolute w-0.75 h-0.75 top-[34%] left-[89%] animate-star-twinkle-random rounded-full"
+      <div class="absolute w-[3px] h-[3px] top-[34%] left-[89%] animate-star-twinkle-random rounded-full"
         style="background: rgba(255, 255, 255, 0.8); box-shadow: 0 0 12px white; animation-delay: -0.5s;"></div>
-      <div class="absolute w-1.25 h-1.25 top-[29%] left-[85%] animate-star-twinkle-slow rounded-full"
+      <div class="absolute w-[5px] h-[5px] top-[29%] left-[85%] animate-star-twinkle-slow rounded-full"
         style="background: rgba(255, 255, 255, 1); box-shadow: 0 0 22px white, 0 0 44px rgba(150, 200, 255, 0.7); animation-delay: -3s;">
       </div>
     </div>
@@ -197,13 +197,13 @@
       <div class="constellation-line" style="top: 76%; left: 26%; width: 45px; transform: rotate(150deg);"></div>
 
       <!-- Estrellas de Leo -->
-      <div class="absolute w-1.25 h-1.25 top-[70%] left-[20%] animate-star-twinkle-medium rounded-full"
+      <div class="absolute w-[5px] h-[5px] top-[70%] left-[20%] animate-star-twinkle-medium rounded-full"
         style="background: rgba(255, 240, 200, 0.95); box-shadow: 0 0 25px rgba(255, 230, 180, 0.9);"></div>
-      <div class="absolute w-1 h-1 top-[73%] left-[23%] animate-star-twinkle-fast rounded-full"
+      <div class="absolute w-[4px] h-[4px] top-[73%] left-[23%] animate-star-twinkle-fast rounded-full"
         style="background: rgba(255, 255, 255, 0.9); box-shadow: 0 0 18px white; animation-delay: -1s;"></div>
-      <div class="absolute w-0.75 h-0.75 top-[76%] left-[26%] animate-star-twinkle-pulse rounded-full"
+      <div class="absolute w-[3px] h-[3px] top-[76%] left-[26%] animate-star-twinkle-pulse rounded-full"
         style="background: rgba(255, 255, 255, 0.85); box-shadow: 0 0 14px white; animation-delay: -2s;"></div>
-      <div class="absolute w-1 h-1 top-[72%] left-[28%] animate-star-twinkle-random rounded-full"
+      <div class="absolute w-[4px] h-[4px] top-[72%] left-[28%] animate-star-twinkle-random rounded-full"
         style="background: rgba(220, 230, 255, 0.9); box-shadow: 0 0 16px rgba(200, 220, 255, 0.8); animation-delay: -0.5s;">
       </div>
     </div>
@@ -219,15 +219,15 @@
       style="background: rgba(255, 255, 255, 0.9); box-shadow: 0 0 12px white; animation-delay: -2.1s;"></div>
 
     <!-- Grupo 2 - Tintineo medio -->
-    <div class="absolute w-0.5 h-0.5 top-[40%] left-[50%] animate-star-twinkle-medium rounded-full"
+    <div class="absolute w-[2px] h-[2px] top-[40%] left-[50%] animate-star-twinkle-medium rounded-full"
       style="background: rgba(255, 255, 255, 0.9); box-shadow: 0 0 15px white; animation-delay: -0.7s;"></div>
-    <div class="absolute w-0.5 h-0.5 top-[50%] left-[60%] animate-star-twinkle-medium rounded-full"
+    <div class="absolute w-[2px] h-[2px] top-[50%] left-[60%] animate-star-twinkle-medium rounded-full"
       style="background: rgba(255, 255, 255, 0.8); box-shadow: 0 0 10px white; animation-delay: -2.5s;"></div>
 
     <!-- Grupo 3 - Tintineo lento -->
-    <div class="absolute w-0.75 h-0.75 top-[10%] left-[50%] animate-star-twinkle-slow rounded-full"
+    <div class="absolute w-[3px] h-[3px] top-[10%] left-[50%] animate-star-twinkle-slow rounded-full"
       style="background: rgba(255, 255, 255, 1); box-shadow: 0 0 20px white;"></div>
-    <div class="absolute w-0.75 h-0.75 top-[80%] left-[80%] animate-star-twinkle-slow rounded-full"
+    <div class="absolute w-[3px] h-[3px] top-[80%] left-[80%] animate-star-twinkle-slow rounded-full"
       style="animation-delay: -2s; background: rgba(255, 255, 255, 0.9); box-shadow: 0 0 15px white;"></div>
 
     <!-- Grupo 4 - Estrellas azuladas -->
@@ -237,12 +237,12 @@
     <div class="absolute w-1 h-1 top-[85%] left-[15%] animate-star-twinkle-random rounded-full"
       style="background: rgba(180, 200, 255, 0.8); box-shadow: 0 0 8px rgba(180, 200, 255, 0.7); animation-delay: -1.8s;">
     </div>
-    <div class="absolute w-0.5 h-0.5 top-[75%] left-[90%] animate-star-twinkle-pulse rounded-full"
+    <div class="absolute w-[2px] h-[2px] top-[75%] left-[90%] animate-star-twinkle-pulse rounded-full"
       style="background: rgba(160, 180, 255, 0.9); box-shadow: 0 0 15px rgba(160, 180, 255, 0.8); animation-delay: -1.2s;">
     </div>
 
     <!-- Estrella fugaz ocasional -->
-    <div class="shooting-star absolute w-0.5 h-100px top-0 left-0 shooting-star-anim opacity-0" style="
+    <div class="shooting-star absolute w-[2px] h-[100px] top-0 left-0 shooting-star-anim opacity-0" style="
                 background: linear-gradient(to bottom, transparent, white 30%, transparent);
                 animation-delay: 5s;
              ">
