--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
               
               <!-- Vite -->
               <div
-                class="flex flex-col items-center p-3 bg-slate-800 rounded-lg hover:bg-slate-800/50 border border-transparent hover:border-orange-400 transition-all duration-300 hover:scale-105">
+                class="flex flex-col items-center p-3 bg-slate-800 rounded-lg hover:bg-slate-800/50 border border-transparent hover:border-purple-500 transition-all duration-300 hover:scale-105">
                 <div class="w-10 h-10 flex items-center justify-center mb-2">
                   <svg fill="none" viewBox="0 0 48 46">
                     <path fill="#863bff"
